--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 130px;
+    height: 100px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .nav-logo{
@@ -18,8 +19,8 @@ nav{
 }
 
 .nav-img{
-    height: 40px;
-    width: 86.4px;
+    height: 30px;
+    width: 62px;
 }
 
 nav ul{
@@ -35,7 +36,7 @@ nav li{
 }
 
 .nav-title{
-   font-size: 35px;
+   font-size: 32px;
 }
 
 .pink-g{
