--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ nav{
 
 .nav-img{
     height: 30px;
-    width: 62px;
+    width: 60px;
 }
 
 nav ul{
@@ -33,6 +33,9 @@ nav li{
     display: flex;
     gap: 15px;
     align-items: center;
+    font-size: 13px;
+    font-weight: 500;
+    color: rgba(60, 53, 79, 1);
 }
 
 .nav-title{
