--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,16 @@
     margin: 0px;
 }
 
+header{
+    height: 100vh;
+}
+
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 85px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 15px rgba(133, 4, 101, 0.107);
     gap: 150px;
 }
 
@@ -54,4 +58,16 @@ nav li{
     width: auto;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+/* banner started */
+.banner{
+    display: flex;
+    justify-content: space-between;
+}
+.banner-writing-container{
+    background-image: url('images/group-14-2.png');
+    background-repeat: no-repeat;
+    width: 600px;
+    height: 468px;
 }
