banner writing added

--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,89 @@
-*{
-    font-family: "Work Sans", sans-serif;
-    padding: 0px;
-    margin: 0px;
-}
-
-header{
-    height: 100vh;
-}
-
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 85px;
-    box-shadow: 0px 2px 15px rgba(133, 4, 101, 0.107);
-    gap: 150px;
-}
-
-.nav-logo{
-    display: flex;
-    align-items: center;
-    gap: 14px;
-}
-
-.nav-img{
-    height: 28px;
-    width: 57px;
-}
-
-nav ul{
-    display: flex;
-    gap: 20px;
-}
-
-nav li{
-    list-style: none;
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    font-size: 12.5px;
-    font-weight: 500;
-    color: rgba(60, 53, 79, 1);
-    cursor: pointer;
-}
-
-.nav-title{
-   font-size: 30px;
-}
-
-.pink-g{
-   color: rgba(255, 66, 165, 1);
-}
-
-.follow{
-    background-color: rgba(11, 2, 35, 0.1);
-    border-radius: 5px;
-    height: 39px;
-    width: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* banner started */
-.banner{
-    display: flex;
-    justify-content: space-between;
-}
-
-.banner-writing-container{
-    background-image: url('images/group-14-2.png');
-    background-repeat: no-repeat;
-    width: 600px;
-    height: 468px;
-}
-
-.banner-img{
-    margin-right: 150px;
-}
+  *{
+      font-family: "Work Sans", sans-serif;
+      padding: 0px;
+      margin: 0px;
+  }
+  
+  header{
+      height: 100vh;
+  }
+  
+  /* nav started */
+  nav{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 85px;
+      box-shadow: 0px 2px 15px rgba(133, 4, 101, 0.107);
+      gap: 150px;
+  }
+  
+  .nav-logo{
+      display: flex;
+      align-items: center;
+      gap: 14px;
+  }
+  
+  .nav-img{
+      height: 28px;
+      width: 57px;
+  }
+  
+  nav ul{
+      display: flex;
+      gap: 20px;
+  }
+  
+  nav li{
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      align-items: center;
+      font-size: 12.5px;
+      font-weight: 500;
+      color: rgba(60, 53, 79, 1);
+      cursor: pointer;
+  }
+  
+  .nav-title{
+     font-size: 30px;
+  }
+  
+  .pink-g{
+     color: rgba(255, 66, 165, 1);
+  }
+  
+  .follow{
+      background-color: rgba(11, 2, 35, 0.1);
+      border-radius: 5px;
+      height: 39px;
+      width: auto;
+      padding-left: 15px;
+      padding-right: 15px;
+  }
+  
+  /* banner started */
+  .banner{
+      display: flex;
+      justify-content: space-between;
+  }
+  
+  .banner-writing-container{
+      background-image: url('images/group-14-2.png');
+      background-repeat: no-repeat;
+      width: 600px;
+      height: 468px;
+  }
+  
+  .banner-img{
+      margin-right: 150px;
+  }
+  
+  .goat-container{
+      margin-left: 150px;
+  }
+  
+  .banner-title{
+     font-size: 36px;
+     font-weight: 500;
+  }
