--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,14 @@
     width: 110px;
   }
 
+
+
+  /* responsive started */
+  @media screen  and (max-width:576px){
+    nav{
+        flex-direction: column;
+    }
+    nav ul{
+        flex-direction: column;
+    }
+  }
