--- a/styles.css
+++ b/styles.css
@@ -144,8 +144,44 @@
     width: 110px;
   }
 
+/* Section-2: card container started */
   .card-container{
-     text-align: center;
+     height: 100vh;
+     margin-top: 80px;
+     margin-left: 150px;
+     margin-right: 150px;
+  }
+
+  .card-title{
+    text-align: center;
+    font-size: 33px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .card-des{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 13px;
+    color: rgba(83, 76, 100, 1);
+    font-weight: 400;
+  }
+
+  .game-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .card{
+    border: 1px solid black;
+    width: 200px;
+    height: 320px;
+  }
+
+  .card-img{
+    width: 200px;
   }
 
 
