--- a/styles.css
+++ b/styles.css
@@ -182,14 +182,23 @@
   }
 
   .card{
-    border: 1px solid black;
-    width: 220px;
+    width: 225px;
     height: 320px;
     cursor: pointer;
   }
 
   .card-img{
-    width: 220px;
+    width: 225px;
+    margin-bottom: 15px;
+  }
+
+  .card-sub{
+    color: rgba(83, 76, 100, 1);
+    font-size: 13px;
+    font-weight: 500;
+    text-align: left;
+    margin-top: 0px;
+    margin-bottom: 2px;
   }
 
 
