--- a/styles.css
+++ b/styles.css
@@ -389,6 +389,7 @@
       color: #fff;
       padding-top: 70px;
       text-align: center;
+      padding-bottom: 80px;
     }
    .footer-logo{
     justify-content: center;
