--- a/styles.css
+++ b/styles.css
@@ -391,9 +391,19 @@
       text-align: center;
       padding-bottom: 80px;
     }
+
    .footer-logo{
     justify-content: center;
-   }
+    }
+
+    .story{
+      font-size: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 36px;
+      margin-bottom: 32px;
+    }
 
 
 
