--- a/styles.css
+++ b/styles.css
@@ -398,6 +398,7 @@
 
     .story{
       font-size: 10px;
+      font-weight: 500;
       display: flex;
       justify-content: center;
       gap: 40px;
@@ -414,6 +415,13 @@
       gap: 30px;
       color: rgba(255, 255, 255, 0.6);
       cursor: pointer;
+    }
+
+    .last-text{
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 400;
+      font-size: 10px;
+      margin-top: 15px;
     }
 
 
