--- a/styles.css
+++ b/styles.css
@@ -389,36 +389,44 @@
       color: #fff;
       padding-top: 70px;
       text-align: center;
-      padding-bottom: 80px;
+      height: 67vh;
     }
 
    .footer-logo{
     justify-content: center;
+    margin-bottom: 0px;
+    margin-top: 10px;
     }
 
     .story{
-      font-size: 10px;
+      font-size: 12px;
       font-weight: 500;
       display: flex;
       justify-content: center;
       gap: 40px;
-      margin-top: 36px;
-      margin-bottom: 32px;
+      margin-top: 50px;
+      margin-bottom: 50px;
       cursor: pointer;
     }
 
     .footer-icon-container{
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 30px;
+      margin-bottom: 50px;
+    }
+
+    .footer-icon{
+      cursor: pointer;
     }
    
     .terms{
       font-weight: 400;
       display: flex;
       justify-content: center;
-      font-size: 10px;
-      gap: 30px;
+      font-size: 11px;
+      gap: 38px;
       color: rgba(255, 255, 255, 0.6);
       cursor: pointer;
     }
@@ -427,7 +435,7 @@
       color: rgba(255, 255, 255, 0.6);
       font-weight: 400;
       font-size: 10px;
-      margin-top: 15px;
+      margin-top: 25px;
     }
 
 
